--- a/fomo/package.json
+++ b/fomo/package.json
@@ -10,6 +10,7 @@
     "react": "~15.4.1",
     "react-native": "0.42.0",
     "react-native-maps": "^0.14.0",
+    "react-native-search-box": "0.0.9",
     "react-navigation": "^1.0.0-beta.7"
   },
   "devDependencies": {
