added react-native-maps and gmaps api key

--- a/fomo/android/app/src/main/AndroidManifest.xml
+++ b/fomo/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDFmM6D_i6eShSdEqv5b6YlGAGqW03rlm4"/>
     </application>
 
 </manifest>
