--- a/fomo/android/settings.gradle
+++ b/fomo/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'fomo'
+include ':react-native-maps'
+project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/android')
 
 include ':app'
