--- a/expofomo/package.json
+++ b/expofomo/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0"
+    "react-native": "^0.47.0",
+    "react-native-search-box": "0.0.11",
+    "react-navigation": "^1.0.0-beta.11"
   }
 }
